Z-index correctif home desktop

--- a/src/app/home-page/home-page.component.scss
+++ b/src/app/home-page/home-page.component.scss
@@ -54,11 +54,9 @@
           transform: rotate(270deg);
         }
         &.anim {
-          animation: boutonDesktop 3s;
+          animation: boutonDesktop 1.5s;
         }
-        &:hover {
-          animation: shake 1s;
-        }
+
       }
     }
 
